Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-40878

If the header is split over two TCP packets then it will have a problem with parsing the header

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.5.0
    • 5.3.1
    • WebSockets
    • None
    • 06df2dac55dfac912b7eb1cbb6c29f2b0594ae10

      If the header is split over two TCP packets then it will have a problem with parsing the header. This is due to the fact that it relies on readChar() and if this has nothing to read (even if it is not complete) then it will end up failing.

        1. Handshake-fix.diff
          8 kB
          Allan Sandfeld Jensen
        For Gerrit Dashboard: QTBUG-40878
        # Subject Branch Project Status CR V

            allan.jensen Allan Sandfeld Jensen
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes